# HydraFS-Client

./: .gitignore  CMakeLists.txt  README.md
src/client/: main.cpp
src/proto/: hydra.proto
